v2.3.2
 - Bug Fix: Index out of bounds in events.inl on an attacker check - thanks Striker

v2.3.1
 - Bug Fix: Link wasn't linked correctly in war3help
 - Bug Fix: If a player is STEAM_ID_PENDING they will be reconnected
 - Change: Not all old data will be erased, the most current timestamp will be checked and all other records will be updated to that timestamp

v2.3.0
 - Addition: If there is an error on a database connection, the error is now printed to the amxx logs
 - Change: How defuse kits, armor and the buyzones are interpreted (uses cstrike module now)
 - Bug Fix: ADMIN_LEVEL_WC3 wasn't read for the give mole command
 - Bug Fix: Shield would not be given with reincarnation
 - Bug Fix: (DOD) Undead's levitiation, reincarnation, suicide bomber
 - Bug Fix: Attempting to query cvar values for bots (thanks Corrosion X)
 - Removed: amx_wc3 (just use amx_cvar sv_warcraft3 0/1)
 - Removed: war3ft module, it is no longer needed, but fakemeta must be turned on

v2.2.9
 - Addition: resetxp yes/no menu
 - Addition: Default amxx db added if a user does not enter one (for SQLite)
 - Bug Fix: XP_Add_Slashes could cause a runtime error with certain names (and XP wouldn't save)
 - Bug Fix: When using the vault, XP wouldn't show in the changerace menu
 - Bug Fix: XP wouldn't save for MySQL when the name contained more than one '
 - Bug Fix: Chameleon XP wouldn't show in the changerace menu even though it was there
 - Bug Fix: String formatting error in XP_Check_Connection
 - Bug Fix: Players getting an abnormally large amount of health
 - Change: CVARs changed to reflect that mysql isn't needed, UPDATE your war3ft.cfg
 - Removed: [WAR3FT]/[WAR3] tags in front of log_amx statements
 - Update: languages.txt file

v2.2.8
 - Addition: Added FT_query_client cvar, setting this to 1 will NOT query the client's cl_minmodel value
 - Addition: Vault pruning (only works with data inserted from version 2.2.8 and onward)
 - Change: sv_mysql_save_end_round changed to sv_save_end_round