@@ -3,6 +3,7 @@
 mp_savexp		0		// Enables saving of experience (uses a vault, default is 0)
 sv_sql			0		// Save using a SQL module (a module needs to be turned on, note: to use this mp_savexp must also be 1, default is 0)
 FT_saveby		0		// What should I save this as?  steam id = 0, IP = 1, name = 2 (default is 0)
+FT_admin_flag		"m"		// Admin flag required to give/take XP (default is m)
 
 // SQL configuration
 FT_sql_host		"127.0.0.1"	// Host Name
